🐛 FIX: remove horizontal scrollbars

--- a/resources/js/components/header/style.css
+++ b/resources/js/components/header/style.css
@@ -1,3 +1,7 @@
+.adjust-row {
+    margin-left: -17px;
+    margin-right: 0px;
+}
 
 .navbar .container .navbar-brand {
     color: white;
